# couchbase-lite-workshop

./: README.md  README_EXECUTORCH.md  setup_qnn_libs.ps1  workshop_details.md
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  executorch_jni.cpp
app/src/main/java/com/ml/shivay_couchbase/docqa/: ExecuTorchRunner.kt  MainActivity.kt
app/src/main/java/com/ml/shivay_couchbase/docqa/data/: ChunksDB.kt  GeminiAPIKey.kt  HFAccessToken.kt  LocalModel.kt
app/src/main/java/com/ml/shivay_couchbase/docqa/di/: AppModule.kt  LLMModule.kt
app/src/main/java/com/ml/shivay_couchbase/docqa/domain/: ChunksUseCase.kt  DocumentsUseCase.kt  QAUseCase.kt
app/src/main/java/com/ml/shivay_couchbase/docqa/domain/embeddings/: SentenceEmbeddingProvider.kt
app/src/main/java/com/ml/shivay_couchbase/docqa/domain/llm/: ExecuTorchAPI.kt  GeminiRemoteAPI.kt  LLMInferenceAPI.kt  LiteRTAPI.kt
app/src/main/java/com/ml/shivay_couchbase/docqa/ui/components/: AppAlertDialog.kt
app/src/main/java/com/ml/shivay_couchbase/docqa/ui/screens/: ChatScreen.kt  ChatScreenMoreOptionsPopup.kt  DocsScreen.kt
app/src/main/java/com/ml/shivay_couchbase/docqa/ui/screens/edit_credentials/: EditCredentialsScreen.kt  EditCredentialsViewModel.kt
app/src/main/java/com/ml/shivay_couchbase/docqa/ui/screens/local_models/: DownloadModelDialog.kt  (+2 more)
app/src/main/java/com/ml/shivay_couchbase/docqa/ui/viewmodels/: ChatViewModel.kt
app/src/main/res/xml/: network_security_config.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
